Bug 1454105 - Do not flatten opacity for IB splits r=mattwoodrow

MozReview-Commit-ID: 67nBRgzdSZ6